--- a/HospidieuFront/src/styles.scss
+++ b/HospidieuFront/src/styles.scss
@@ -23,7 +23,18 @@ input {
     }
 }
 
+.overlay {
+    background-color: rgb(0, 0, 0,0.3);
+    height: 100vh;
+}
 
-
-
+select {
+    height: 40px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 1px 1px 20px 3px darkgrey;
+    &::placeholder{
+        padding-left: .5em;
+    }
+}
 
