Add comment in DB works except user is null (waiting for user features) ; html/css to do

--- a/HospidieuFront/src/app/components/add-comment/add-comment.component.html
+++ b/HospidieuFront/src/app/components/add-comment/add-comment.component.html
@@ -1,1 +1,19 @@
-<p>add-comment works!</p>
+<h2>Ajouter un commentaire</h2>
+
+<p>Id du patient : {{ idPatient }}</p>
+
+<form [formGroup]="commentForm" (ngSubmit)="onSubmit()">
+    <div>
+        <label for="comment">Commentaire :</label>
+        <input type="text" formControlName="comment">
+    </div>
+    <div>
+        <label for="symptom">Symptômes :</label>
+        <input type="text" formControlName="symptom">
+    </div>
+    <div>
+        <button type="submit">Ajouter</button>
+        <button>Annuler</button>
+    </div>
+
+</form>
