--- a/HospidieuFront/src/styles.scss
+++ b/HospidieuFront/src/styles.scss
@@ -24,7 +24,7 @@ input {
 }
 
 .overlay {
-    background-color: rgb(0, 0, 0,0.3);
+    background-color: rgba(0, 0, 0, 0.7);
     height: 100vh;
 }
 
