Modal ok (flickers at opening) ; feature done

--- a/HospidieuFront/src/app/components/add-comment/add-comment.component.html
+++ b/HospidieuFront/src/app/components/add-comment/add-comment.component.html
@@ -35,7 +35,7 @@
         </div>
         <div class="buttons">
             <button (click)="onSubmit()" class="submit">Ajouter</button>
-            <button class="cancel">Annuler</button>
+            <button (click)="onClose()" class="cancel">Annuler</button>
         </div>
 
     </form>
