--- a/HospidieuFront/src/app/components/add-comment/add-comment.component.scss
+++ b/HospidieuFront/src/app/components/add-comment/add-comment.component.scss
@@ -1,12 +1,11 @@
 @import '../../../styles.scss';
 
 .wrapper {
-    margin: auto;
-    max-width: 500px;
-    min-width: 200px;
-    border-radius: 30px;
-    box-shadow: 1px 1px 20px 3px darkgrey;
-    background-color: $colorBaseFond;
+    position: fixed;
+    inset: 0;
+    z-index: 10000;
+    background-color: rgba(0, 0, 0, .4);
+    padding: 40px;
 }
 
 .form-area {
@@ -15,7 +14,12 @@
 }
 
 form {
-    max-width: 100%;
+    margin: auto;
+    max-width: 500px;
+    min-width: 200px;
+    border-radius: 30px;
+    box-shadow: 1px 1px 20px 3px darkgrey;
+    background-color: $colorBaseFond;
     padding: 40px;
     label {
         margin: 5px;
@@ -69,3 +73,4 @@ h2 {
     text-align: center;
     margin: 0 0 15px;
 }
+
