--- a/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
+++ b/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
@@ -1,5 +1,5 @@
 <h2>A faire !</h2>
 
-<p> Détails du patient {{ id }}</p>
+<p> Détails du patient {{ patientId }}</p>
 
 <button (click)="onAddComment()">Ajouter un commentaire</button>
