--- a/HospidieuFront/src/app/components/header-dyn/header-dyn.component.html
+++ b/HospidieuFront/src/app/components/header-dyn/header-dyn.component.html
@@ -7,8 +7,9 @@
 
     <ul class="listNavAdmin">
         <li class="liParentAdmin">
-            <a routerLink="/user" class="userNav">Utilisateur</a>
+            <a  class="userNav">Utilisateur</a>
             <ul class="sousAdmin">
+                <li routerLink="/user">Liste d'utilisateurs</li>
                 <li><a href=""></a>Ajouter un Utilisateur</li>
                 <li><a href=""></a>Modifier un Utilisateur</li>
             </ul>
@@ -17,6 +18,7 @@
         <li class="liParentPatient">
             <a class="userNav">Patient</a>
             <ul class="sousPatient">
+                <li><a href=""></a>Liste de patients</li>
                 <li><a href=""></a>Ajouter un Patient</li>
                 <li><a href=""></a>Modifier un Patient</li>
             </ul>
