--- a/HospidieuFront/src/app/components/header-dyn/header-dyn.component.scss
+++ b/HospidieuFront/src/app/components/header-dyn/header-dyn.component.scss
@@ -1,6 +1,7 @@
 @import '../../../styles.scss';
 
 .headerDynAdmin {
+    z-index: 100;
     height: 80px;
     background-color: $colorBaseBlue;
     position: fixed;
