--- a/HospidieuFront/src/app/components/add-patient/add-patient.component.html
+++ b/HospidieuFront/src/app/components/add-patient/add-patient.component.html
@@ -11,7 +11,7 @@
                         <input placeholder="Nom" type="text" name="name" formControlName="name" [(ngModel)]="patient.name">
 
                         <small *ngIf="form.get('name')?.hasError('required') && form.get('name')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
 
@@ -22,7 +22,7 @@
                         <input placeholder="Prénom" type="text" name="firstname" formControlName="firstname" [(ngModel)]="patient.firstname">
 
                         <small *ngIf="form.get('firstname')?.hasError('required') && form.get('firstname')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
                     
@@ -35,7 +35,7 @@
                         <input placeholder="Adresse" type="text" name="address" formControlName="address" [(ngModel)]="patient.address">
 
                         <small *ngIf="form.get('address')?.hasError('required') && form.get('address')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
 
@@ -44,7 +44,7 @@
                         <input placeholder="Ville" type="text" name="city" formControlName="city" [(ngModel)]="patient.city">
 
                         <small *ngIf="form.get('city')?.hasError('required') && form.get('city')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                         <input placeholder="Code Postal" type="text" name="postcode" formControlName="postcode" [(ngModel)]="patient.postcode">
 
                         <small *ngIf="form.get('postcode')?.hasError('required') && form.get('postcode')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
 
@@ -66,7 +66,7 @@
                         <input placeholder="Date de naissance" type="date" name="birth_date" formControlName="birthDate" [(ngModel)]="patient.birthDate">
 
                         <small *ngIf="form.get('birth_date')?.hasError('required') && form.get('birth_date')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
  
@@ -74,10 +74,10 @@
                 <div class="inputContain">
                     <div class="inputAjoutP">
                         <label for="">N° sécurité social :</label>
-                        <input placeholder="Numéro sécurité social" type="text" name="security_number" formControlName="securityNumber" [(ngModel)]="patient.securityNumber">
+                        <input placeholder="N° sécurité social" type="text" name="security_number" formControlName="securityNumber" [(ngModel)]="patient.securityNumber">
 
                         <small *ngIf="form.get('securityNumber')?.hasError('required') && form.get('securityNumber')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
                     
@@ -86,7 +86,7 @@
                         <input placeholder="XX-XX-XX-XX-XX" formControlName="phone" type="tel" name="phone" [(ngModel)]="patient.phone">
 
                         <small *ngIf="form.get('phone')?.hasError('required') && form.get('phone')?.touched">
-                            This field is required
+                            Champs obligatoire !
                         </small>
                     </div>
 
