--- a/HospidieuFront/src/app/components/connexion/connexion.component.scss
+++ b/HospidieuFront/src/app/components/connexion/connexion.component.scss
@@ -14,8 +14,8 @@
             display: flex;
             flex-direction: column;
             background-color: rgba($colorBaseFond, 0.90);
-            height: 300px;
-            width: 300px;
+            height: 380px;
+            width: 400px;
             padding: 2em 3em 2em 3em;
             border-radius: 10px;
             justify-content: space-between;
@@ -42,6 +42,7 @@
                     font-size: 1em;
                     background-color: $colorBaseRed;
                     font-weight: bold;
+                    margin-top: 1em;
                     &:hover {
                         box-shadow: 0 0 0 0 rgba($colorBaseRed, 1);
                         transform: scale(1);
