--- a/HospidieuFront/src/styles.scss
+++ b/HospidieuFront/src/styles.scss
@@ -29,7 +29,7 @@ input, textarea {
 }
 
 .overlay {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
     height: 100vh;
 }
 
@@ -41,5 +41,13 @@ select {
     &::placeholder{
         padding-left: .5em;
     }
+}
+
+label {
+    margin: 0;
+}
+
+small {
+    color: red;
 }
 
