--- a/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
+++ b/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
@@ -3,3 +3,4 @@
 <p> Détails du patient {{ patientId }}</p>
 
 <button (click)="onAddComment()">Ajouter un commentaire</button>
+<button (click)="onAssignBed()">Entrée</button>
