--- a/HospidieuFront/src/app/components/patients-in/patients-in.component.html
+++ b/HospidieuFront/src/app/components/patients-in/patients-in.component.html
@@ -22,7 +22,7 @@
                     <td>{{ patient.department }}</td>
                     <td>{{ patient.room }}</td>
                     <td>{{ patient.bed }}</td>
-                    <td><button (click)="onGoToPatient(patient.idPatient)">Voir</button></td>
+                    <td class="voirPlus"><button (click)="onGoToPatient(patient.idPatient)">Voir</button></td>
                 </tr>
             </tbody>
         </table>
