--- a/HospidieuFront/src/app/components/add-user/add-user.component.scss
+++ b/HospidieuFront/src/app/components/add-user/add-user.component.scss
@@ -15,11 +15,13 @@
             display: flex;
             flex-direction: column;
             background-color: rgba($colorBaseFond, 0.90);
-            height: 350px;
-            width: 400px;
+            min-height: 420px;
+            min-width: 540px;
             padding: 2em 3em 2em 3em;
             border-radius: 10px;
             justify-content: space-between;
+            margin-top: 5em;
+            gap: 1em;
             h1 {
                 margin: 0;
                 text-align: center;
@@ -30,11 +32,20 @@
                 display: flex;
                 flex-direction: row;
                 gap: 68px;
+                position: relative;
+                small {
+                    position: absolute;
+                    top: 5em;
+                }
             }
             .inputUser {
                 display: flex;
                 flex-direction: column;
-                gap: .5em;
+                position: relative;
+                small {
+                    position: absolute;
+                    top: 5em;
+                }
             }
             .buttonContain {
                 display: flex;
@@ -46,8 +57,17 @@
                     cursor: pointer;
                     border-radius: 50px;
                     font-size: 1em;
+                    color: white;
                     background-color: $colorBaseRed;
                     font-weight: bold;
+                    background: linear-gradient(120deg, $colorBaseRed, $colorBaseBlue, $colorBasePurple);
+                    background-size: 200% 100%;
+                    background-position: 100% 0;
+                    transition: background-position .5s;
+                    margin-top: 1em;
+                    &:hover {
+                        background-position: 0 0;
+                    }
                 }
             }
         }
