--- a/HospidieuFront/src/app/components/patients-out/patients-out.component.scss
+++ b/HospidieuFront/src/app/components/patients-out/patients-out.component.scss
@@ -10,11 +10,12 @@
 
 .image-container {
     padding-top: 80px;
-    background-image: url('../../../assets/img/image_infirmiers.jpg');
-    background-size: cover;
-    background-position-x: 30%;
+    background-image: url('../../../assets/img/image-infirmiers.jpg');
+    background-size: contain;
+    background-position-x: -90%;
     min-height: 100%;
-    flex: 2;
+    flex: 3;
+    background-attachment: fixed;
 }
 
 .patients-list-container {
@@ -22,12 +23,14 @@
     flex: 3;
     display: flex;
     flex-flow : column wrap;
-    align-items: center;
+    align-items: flex-start;
 }
 
 h2 {
+    width: 100%;
+    margin-top: 1em;
+    margin-bottom: 1em;
     text-align: center;
-    margin: 10px;
 }
 
 // Fixer la taille si on ajoute la barre de recherche
@@ -38,8 +41,7 @@ h2 {
     gap : 10px;
     // width: 350px;
     button {
-        height: 30px;
-        width: 60px;
+        padding: 0.5em 1em 0.5em 1em;
         border-radius: 7px;
     }
     button:hover {
@@ -47,32 +49,147 @@ h2 {
     }
     .in {
         background-color: $colorBaseBlue;
+        border: none;
+        &:hover {
+            box-shadow: 0 0 0 0 rgba($colorBaseBlue, 1);
+            transform: scale(1);
+            animation: pulse 2s infinite;
+        }
+        &.current {
+            opacity: 0.5;
+            animation: initial;
+            cursor: initial;
+        }
+    }
+    @keyframes pulse {
+        0% {
+            transform: scale(0.95);
+            box-shadow: 0 0 0 0 rgba($colorBaseBlue, 7);
+        }
+    
+        70% {
+            transform: scale(1);
+            box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+        }
+    
+        100% {
+            transform: scale(0.95);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        }
+    }
     }
     .out {
         background-color: $colorBaseRed;
         color: white;
+        border: none;
+        &:hover {
+            box-shadow: 0 0 0 0 rgba($colorBaseBlue, 1);
+            transform: scale(1);
+            animation: pulse 2s infinite;
+        }
+        &.current {
+            opacity: 0.5;
+            animation: none;
+            cursor: initial;
+        }
     }
-    .current {
-        opacity: 0.5;
+    @keyframes pulse {
+        0% {
+            transform: scale(0.95);
+            box-shadow: 0 0 0 0 rgba($colorBaseBlue, 7);
+        }
+    
+        70% {
+            transform: scale(1);
+            box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+        }
+    
+        100% {
+            transform: scale(0.95);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        }
     }
-}
+    
 
 
 
 table {
     border-collapse: collapse;
+    width: 100%;
 }
 
-th, tr {
+th{
     padding: 5px 10px;
-    background-color: rgb(170, 170, 170);
+    background-color: $colorBaseRed;
 }
 
-tr:nth-child(odd) {
-    background-color: rgba(179, 179, 179, 0.6);
+tr:nth-child(even) {
+    background-color: rgb(228 191 191);
 }
 
 td {
-    text-align: center;
-    padding: 5px 7px;
+    padding: 5px 10px;
+}
+
+.voirPlus {
+    button {
+        width: 100%;
+        padding: .8em;
+        font-weight: bolder;
+        border: none;
+        outline: none;
+        color: #fff;
+        background: $colorBasePurple;
+        cursor: pointer;
+        position: relative;
+        z-index: 0;
+        border-radius: 10px;
+    }
+    
+    button:before {
+        content: '';
+        background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+        position: absolute;
+        top: -2px;
+        left:-2px;
+        background-size: 400%;
+        z-index: -1;
+        filter: blur(5px);
+        width: calc(100% + 4px);
+        height: calc(100% + 4px);
+        animation: glowing 20s linear infinite;
+        opacity: 0;
+        transition: opacity .3s ease-in-out;
+        border-radius: 10px;
+    }
+    
+    button:active {
+        color: #000
+    }
+    
+    button:active:after {
+        background: transparent;
+    }
+    
+    button:hover:before {
+        opacity: 1;
+    }
+    
+    button:after {
+        z-index: -1;
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: $colorBasePurple;
+        left: 0;
+        top: 0;
+        border-radius: 10px;
+    }
+    
+    @keyframes glowing {
+        0% { background-position: 0 0; }
+        50% { background-position: 400% 0; }
+        100% { background-position: 0 0; }
+    }
 }
