--- a/HospidieuFront/src/app/components/user/user.component.scss
+++ b/HospidieuFront/src/app/components/user/user.component.scss
@@ -10,9 +10,9 @@
 
 .image-container {
     padding-top: 80px;
-    background-image: url('../../../assets/img/image_infirmiers.jpg');
+    background-image: url('../../../assets/img/bgAdminUser.jpg');
     background-size: cover;
-    background-position-x: 30%;
+    background-position-x: 75%;
     min-height: 100%;
     flex: 2;
 }
@@ -27,23 +27,27 @@
 
 h2 {
     text-align: center;
-    margin: 10px;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 
 table {
     border-collapse: collapse;
+    thead {
+        background-color: $colorBaseRed;
+    }
 }
 
 th, tr {
     padding: 5px 10px;
-    background-color: rgb(170, 170, 170);
 }
 
-tr:nth-child(odd) {
-    background-color: rgba(179, 179, 179, 0.6);
+
+
+.table-striped tbody tr:nth-of-type(even) {
+    background-color: rgb(209, 167, 167);
 }
 
 td {
-    text-align: center;
-    padding: 5px 7px;
+    padding: 5px 10px;
 }
