feature done with hardcode patient in parent page ; commit before pulling dev

--- a/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
+++ b/HospidieuFront/src/app/components/patient-detail/patient-detail.component.html
@@ -4,3 +4,4 @@
 
 <button (click)="onAddComment()">Ajouter un commentaire</button>
 <button (click)="onAssignBed()">Entrée</button>
+<button (click)="onOuting()">Sortie</button>
