--- a/HospidieuFront/src/app/components/user/user.component.scss
+++ b/HospidieuFront/src/app/components/user/user.component.scss
@@ -34,7 +34,8 @@ h2 {
 table {
     border-collapse: collapse;
     thead {
-        background-color: $colorBaseRed;
+        background-color: $colorBasePurple;
+        color: white;
     }
 }
 
@@ -45,7 +46,7 @@ th, tr {
 
 
 .table-striped tbody tr:nth-of-type(even) {
-    background-color: rgb(209, 167, 167);
+    background-color: rgb(203, 167, 209);
 }
 
 td {
